# sikontrol

./: README.md  index.html  package.json  tailwind.config.js
public/: splashscreen.html
public/views/: splashscreen.html
src/: main.ts  montserrat.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_controller.rs  main.rs  socket_instance.rs
src-tauri/src/audio_controller/: mod.rs
src-tauri/src/audio_events/: mod.rs
src-tauri/src/socket_instance/: mod.rs
src-tauri/src/windows_utils/: mod.rs
src/controllers/: app_controller.ts  credits_controller.ts  main_controller.ts  settings_controller.ts  splash_controller.ts
src/data/: helpers.json
src/interfaces/: IHelper.ts  IPackageJson.ts  ISocket.ts  IToml.ts
src/libs/: CustomAlert.ts  StoreManager.ts
